* Modified previous/next links in Display template to be shown in a <we:cat> instead, next to the topic title at the top, and next to the jump box at the bottom. This should help differentiate between page prev/next and topic prev/next. (Display.php, Display.template.php, sections.css) * Forgot to apply rgba() fix to IE8. (ie8.css) * French translation. (index.french.php) * Indenazi. (index.template.php)

--- a/Themes/default/styles/ie8.css
+++ b/Themes/default/styles/ie8.css
@@ -28,3 +28,7 @@ input.save
 	background-position: 4px -62px
 input.new
 	background-position: 4px -94px
+
+#upper_section .frame
+	background: none
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$head_bg/hex, endColorstr=$head_bg/hex)
